# climatic_sim_gpu

./: .gitignore  README.md  convert_cubed_sphere_to_fem.py  elevation_reader.py  fem_solver.py  fluid_dynamics.py  main.py  mesh_generator.py  mesh_quality.py  requirements.txt  simulation_params.py  sphere_viewer.py
cuda_mod/: CMakeLists.txt  README.md
cuda_mod/examples/: example_fem_heat.py
cuda_mod/src/: climate_constants.hpp  climatic_data.hpp  climatic_kernels.cu  cuda_fem_solver.cu  pybind_wrapper.cpp
native_solver/: README.md  __init__.py  native_solver.py
opencl_solver/: __init__.py  climatic_data.py  kernels.cl  solver.py  test_solver.py  vector_add.py
opencl_solver/kernels/: advection.cl  dynamics.cl  initialization.cl  physics.cl  pressure.cl  radiation.cl
python_solver/: fem_solver.py
